--- a/WebFront/javascript/exam31.html
+++ b/WebFront/javascript/exam31.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-      //자바로 객체 사용 하는 방법
+      //javascript로 객체 사용 하는 방법
       let person = {
         name: "홍길동",
         phone: "010-1111-2222",
